<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorToolbar"
    android:elevation="4dp"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_create_question"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorToolbar"
        android:elevation="6dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/create_test_toolbar_menu"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="Создание теста"
        app:titleTextColor="@android:color/black" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorToolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_create_question"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_createQuestion"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:elevation="2dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/white"
                    android:scaleType="center"
                    app:srcCompat="@drawable/createtest_default_image" />

            </androidx.cardview.widget.CardView>

            <EditText
                android:id="@+id/editTextQuestion"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:autofillHints=""
                android:background="@drawable/fields_style_gradient"
                android:ems="10"
                android:hint="@string/question_hint"
                android:inputType="textPersonName"
                android:maxLength="200"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:scrollIndicators="bottom"
                android:scrollHorizontally="true"
                android:textColor="@android:color/background_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView_createQuestion" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/variant_answer"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextQuestion" />


            <androidx.cardview.widget.CardView
                android:id="@+id/card_answer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/editTextAnswer1"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:backgroundTint="@android:color/transparent"
                        android:ems="10"
                        android:hint="@string/hint_write_answer"
                        android:inputType="textMultiLine|textNoSuggestions"
                        android:maxLength="100"
                        android:paddingStart="5dp"
                        android:scrollHorizontally="true"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/checkBox_answer1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <CheckBox
                        android:id="@+id/checkBox_answer1"
                        android:layout_width="100dp"
                        android:layout_height="0dp"
                        android:layout_marginEnd="4dp"
                        android:buttonTint="@color/colorPrimary"
                        android:gravity="center"
                        android:layoutDirection="rtl"
                        android:maxLines="2"
                        android:minLines="2"
                        android:text="@string/check_box_answer"
                        android:textSize="10sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/editTextAnswer1"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_answer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_answer1">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/editTextAnswer2"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:backgroundTint="@android:color/transparent"
                        android:ems="10"
                        android:hint="@string/hint_write_answer"
                        android:inputType="textMultiLine|textNoSuggestions"
                        android:maxLength="100"
                        android:paddingStart="5dp"
                        android:scrollHorizontally="false"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/checkBox_answer2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <CheckBox
                        android:id="@+id/checkBox_answer2"
                        android:layout_width="100dp"
                        android:layout_height="0dp"
                        android:layout_marginEnd="4dp"
                        android:buttonTint="@color/colorPrimary"
                        android:gravity="center"
                        android:layoutDirection="rtl"
                        android:maxLines="2"
                        android:minLines="2"
                        android:text="@string/check_box_answer"
                        android:textSize="10sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/editTextAnswer2"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_answer3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_answer2">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/editTextAnswer3"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:backgroundTint="@android:color/transparent"
                        android:ems="10"
                        android:hint="@string/hint_write_answer"
                        android:inputType="textMultiLine|textNoSuggestions"
                        android:maxLength="100"
                        android:paddingStart="5dp"
                        android:scrollHorizontally="false"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/checkBox_answer3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <CheckBox
                        android:id="@+id/checkBox_answer3"
                        android:layout_width="100dp"
                        android:layout_height="0dp"
                        android:layout_marginEnd="4dp"
                        android:buttonTint="@color/colorPrimary"
                        android:gravity="center"
                        android:layoutDirection="rtl"
                        android:maxLines="2"
                        android:minLines="2"
                        android:text="@string/check_box_answer"
                        android:textSize="10sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/editTextAnswer3"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_answer4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_answer3">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/editTextAnswer4"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:backgroundTint="@android:color/transparent"
                        android:ems="10"
                        android:hint="@string/hint_write_answer"
                        android:inputType="textMultiLine|textNoSuggestions"
                        android:maxLength="100"
                        android:paddingStart="5dp"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/checkBox_answer4"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <CheckBox
                        android:id="@+id/checkBox_answer4"
                        android:layout_width="100dp"
                        android:layout_height="0dp"
                        android:layout_marginEnd="4dp"
                        android:buttonTint="@color/colorPrimary"
                        android:gravity="center"
                        android:layoutDirection="rtl"
                        android:maxLines="2"
                        android:minLines="2"
                        android:text="@string/check_box_answer"
                        android:textSize="10sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/editTextAnswer4"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:layout_constraintTop_toBottomOf="@+id/card_answer4"
                tools:layout_editor_absoluteX="0dp">

            </FrameLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>